prusti-tests/tests/verify/ui/forall_triggers.stderr
error: [Prusti: invalid specification] a trigger must mention all bounded variables.
  --> $DIR/forall_triggers.rs:12:79
   |
12 | #[requires(forall(|n: usize, res: usize| count(n) == res ==> true, triggers=[(count(n),)]))]
   |                                                                               ^^^^^^^^

error: [Prusti: invalid specification] Only function calls are allowed in triggers.
  --> $DIR/forall_triggers.rs:15:79
   |
15 | #[requires(forall(|n: usize, res: usize| count(n) == res ==> true, triggers=[(if res == 5 {count(n)} else {3},)]))]
   |                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: [Prusti: invalid specification] Only function calls are allowed in triggers.
  --> $DIR/forall_triggers.rs:18:79
   |
18 | #[requires(forall(|n: usize, res: usize| count(n) == res ==> true, triggers=[(res == count(n),)]))]
   |                                                                               ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

